--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>任意的小站</title>
 <style>
 	body {margin:0;width:100%}
-	.topmeau {list-style-type: none;margin: 0;padding: 0;overflow: hidden;background-color:#5d6474;position: fixed; right: 25px}
+	.topmeau {list-style-type: none;margin: 0;padding: 0;overflow: hidden;background-color:#5d6474;position: fixed; right: 1.7%}
 	.topmeau li{float: right;}
 	.topmeau li a{color:#d0d3da; display: inline-block;text-decoration: none;padding: 16px;}
 	.content {overflow: hidden;background-color: #5D6474;letter-spacing:20px;font-size: 50px;color:#d0d3da}
@@ -15,8 +15,10 @@
 <body style="background-color: #5D6474">
 	<div>
 		<ul class="topmeau">
-			<li><a href="/about.html"><b>日常</b></a></li>
-			<li><a href="#"><b>首页</b></a></li>
+			<li><a href="/about"><b>关于</b></a></li>
+			<li><a href="/article"><b>文章</b></a></li>
+			<li><a href="/route"><b>日常</b></a></li>
+			<li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
 			<li><a href="#"><b>封面</b></a></li>
 		</ul>
 	</div>
