--- a/about/index.html
+++ b/about/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>无标题文档</title>
+<title>关于</title>
 </head>
 <body>
-	<img src="images/鸽子.jpg" alt="鸽子。。">
+	<img src="../assets/images/敏感多情的戏精.jpg" alt="">
 </body>
 </html>
