--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 <head>
 <meta charset="utf-8">
 <title>任意的小站</title>
+<link rel="stylesheet" type="text/css" href="assets/css/Module.css">
 <style>
 	body {margin:0;width:100%}
-	.topmeau {list-style-type: none;margin: 0;padding: 0;overflow: hidden;background-color:#5d6474;position: fixed; right: 1.7%}
-	.topmeau li{float: right;}
-	.topmeau li a{color:#d0d3da; display: inline-block;text-decoration: none;padding: 16px;}
 	.content {overflow: hidden;background-color: #5D6474;letter-spacing:20px;font-size: 50px;color:#d0d3da}
 </style>
 </head>
 
 <body style="background-color: #5D6474">
-	<div>
-		<ul class="topmeau">
-			<li><a href="/about"><b>关于</b></a></li>
-			<li><a href="/article"><b>文章</b></a></li>
-			<li><a href="/route"><b>日常</b></a></li>
-			<li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
-			<li><a href="#"><b>封面</b></a></li>
-		</ul>
-	</div>
+  <div class="topmeau">
+    <ul >
+      <li><a href="About/"><b>关于</b></a></li>
+      <li><a href="Article/"><b>文章</b></a></li>
+      <li><a href="Route/"><b>日常</b></a></li>
+      <li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
+      <li><a href="CoverPage/"><b>封面</b></a></li>
+      </ul>
+    </div>
 	<div class="content">
 		<br>
                 <br><br><br>
