--- a/route/index.html
+++ b/route/index.html
@@ -6,12 +6,20 @@
 </head>
 <script type="text/javascript" src="route.json"></script>
 <body>
+<div id="topmeau">
+		<ul >
+			<li><a href="/about"><b>关于</b></a></li>
+			<li><a href="/article"><b>文章</b></a></li>
+			<li><a href="/route"><b>日常</b></a></li>
+			<li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
+			<li><a href="#"><b>封面</b></a></li>
+		</ul>
+	</div>
 <script>
 var mydata = JSON.parse(data);
-var i
-for (i in mydata)
+for (var i=0;i< mydata.length;i++)
 {
-document.write("<div class='ss'><b>"+i+"</b><br>");
+document.write(mydata[i].c+"<br>");
 }
 </script>
 </body>
