--- a/route/index.html
+++ b/route/index.html
@@ -3,19 +3,21 @@
 <head>
 <meta charset="utf-8">
 <title>日常</title>
+<link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
 </head>
 <script type="text/javascript" src="route.json"></script>
 <body>
-<div id="topmeau">
-		<ul >
-			<li><a href="/about"><b>关于</b></a></li>
-			<li><a href="/article"><b>文章</b></a></li>
-			<li><a href="/route"><b>日常</b></a></li>
-			<li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
-			<li><a href="#"><b>封面</b></a></li>
-		</ul>
-	</div>
+  <div class="topmeau">
+    <ul >
+      <li><a href="https://atarsei.github.io/About"><strong>关于</strong></a></li>
+      <li><a href="https://atarsei.github.io/Article"><b>文章</b></a></li>
+      <li><a href="https://atarsei.github.io/Route"><b>日常</b></a></li>
+      <li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
+      <li><a href="https://atarsei.github.io/CoverPage"><b>封面</b></a></li>
+      </ul>
+    </div>
 <script>
+document.write("<br><br><br><br>");
 var mydata = JSON.parse(data);
 for (var i=0;i< mydata.length;i++)
 {
