去文件名大写

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body style="background-color: #5D6474">
   <div class="topmeau">
     <ul >
-      <li><a href="About/"><b>关于</b></a></li>
-      <li><a href="Article/"><b>文章</b></a></li>
-      <li><a href="Route/"><b>日常</b></a></li>
+      <li><a href="about/"><b>关于</b></a></li>
+      <li><a href="article/"><b>文章</b></a></li>
+      <li><a href="route/"><b>日常</b></a></li>
       <li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
-      <li><a href="CoverPage/"><b>封面</b></a></li>
+      <li><a href="coverpage/"><b>封面</b></a></li>
       </ul>
     </div>
 	<div class="content">
