--- a/assets/Module/nav.html
+++ b/assets/Module/nav.html
@@ -9,11 +9,11 @@
 <body>
   <div class="topmeau">
     <ul >
-      <li><a href="https://atarsei.github.io/About"><strong>关于</strong></a></li>
-      <li><a href="https://atarsei.github.io/Article"><b>文章</b></a></li>
-      <li><a href="https://atarsei.github.io/Route"><b>日常</b></a></li>
+      <li><a href="https://atarsei.github.io/about"><strong>关于</strong></a></li>
+      <li><a href="https://atarsei.github.io/article"><b>文章</b></a></li>
+      <li><a href="https://atarsei.github.io/route"><b>日常</b></a></li>
       <li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
-      <li><a href="https://atarsei.github.io/CoverPage"><b>封面</b></a></li>
+      <li><a href="https://atarsei.github.io/coverpage"><b>封面</b></a></li>
       </ul>
     </div>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
