--- a/route/index.html
+++ b/route/index.html
@@ -7,15 +7,21 @@
 </head>
 <script type="text/javascript" src="route.json"></script>
 <body>
-  <div class="topmeau">
-    <ul >
+ 	<div class="topmeau">
+    <ul>
       <li><a href="https://atarsei.github.io/about"><strong>关于</strong></a></li>
       <li><a href="https://atarsei.github.io/article"><b>文章</b></a></li>
       <li><a href="https://atarsei.github.io/route"><b>日常</b></a></li>
       <li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
       <li><a href="https://atarsei.github.io/coverpage"><b>封面</b></a></li>
       </ul>
-    </div>
+	</div>
+	<div class="route_card">
+		<div class="route_card_top"></div>
+		<div class="route_card_content"></div>
+		<div class="route_card_bottom"></div>
+	</div>
+	
 <script>
 document.write("<br><br><br><br>");
 var mydata = JSON.parse(data);
