--- a/test_text.html
+++ b/test_text.html
@@ -1,8 +1,9 @@
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-<div>
-<ul id="nav">
-<li><a href="/about.html"><b>日常</b></a></li>
-<li><a href="#"><b>首页</b></a></li>
-<li><a href="#"><b>封面</b></a></li>
+<div class="topmeau">
+<ul>
+<li><a href="https://atarsei.github.io/about"><strong>鍏充簬</strong></a></li>
+<li><a href="https://atarsei.github.io/article"><b>鏂囩珷</b></a></li>
+<li><a href="https://atarsei.github.io/route"><b>鏃ュ父</b></a></li>
+<li><a href="https://atarsei.github.io/"><b>棣栭〉</b></a></li>
+<li><a href="https://atarsei.github.io/coverpage"><b>灏侀潰</b></a></li>
 </ul>
 </div>
