--- a/404.html
+++ b/404.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-404
+<body style="text-align: center;">
+<b style="font-size: 50px;">404</b><br>
+<!-- <span>Not Found</span><br> -->
+<i>Sorry,This Page Doesn't Exist</i><br>
+<img src="assets/images/鸽子.jpg" alt="咕咕咕" style="width: 50%"></img>
 </body>
 </html>
