变革页面结构

--- a/assets/Module/nav.html
+++ b/assets/Module/nav.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
 <link rel="stylesheet" type="text/css" href="../css/Module.css">
 </head>
 
 <body>
-  <div class="topmeau">
+  <div class="topmeau" >
     <ul >
       <li><a href="https://atarsei.github.io/about"><strong>关于</strong></a></li>
       <li><a href="https://atarsei.github.io/article"><b>文章</b></a></li>
