--- a/route/index.html
+++ b/route/index.html
@@ -5,10 +5,11 @@
 <title>日常</title>
 <link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/route.css">
+<link rel="stylesheet" type="text/css" href="../assets/css/base.css">
 </head>
 <script type="text/javascript" src="route.json"></script>
 <script type="text/javascript" src="../assets/js/LoadJson.js"></script>
-<body style="background-color:#5D6474">
+<body>
   <div class="topmeau"></div>
   <iframe name="nav" src="../assets/Module/nav.html" style="display: none"></iframe>
   <script>LoadJsonWrite()</script>
