--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,14 @@
 <head>
 <meta charset="utf-8">
 <title>关于</title>
+<link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
+<link rel="stylesheet" type="text/css" href="../assets/css/base.css">
 </head>
+<script type="text/javascript" src="../assets/js/LoadJson.js"></script>
 <body>
-	<img src="../assets/images/敏感多情的戏精.jpg" alt="">
+	<div class="topmeau"></div><br><br><br>
+	<img src="https://atarsei.gitee.io/assets/images/敏感多情的戏精.jpg" alt="">
+	<iframe name="nav" src="../assets/Module/nav.html" style="display: none"></iframe>
+	<script>LoadJsonFrame()</script>
 </body>
 </html>
