--- a/article/index.html
+++ b/article/index.html
@@ -1,15 +1,17 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
-	<head>
-		   
-		<meta charset="UTF-8">
-		<meta name="viewport"
-			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-		   
-		<title>QQ Test</title>
-	</head>
+<head>		   
+<meta charset="UTF-8">
+  <title>文章</title>
+  <link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
+  </head>
+<script type="text/javascript" src="../assets/js/LoadJson.js"></script>
 	<body>
+		<div class="topmeau"></div>
 		<a href="tencent://message/?uin=2608822893&Site=http://vps.shuidazhe.com&Menu=yes">PC版</a>   
 		<a href="mqqwpa://im/chat?chat_type=wpa&uin=2608822893&version=1&src_type=web&web_src=oicqzone.com">移动版</a>
-	</body>
+		<iframe name="nav" src="../assets/Module/nav.html" style="display: none"></iframe>
+		<script>LoadJsonFrame()</script>
+</body>
 </html>
