--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/base.css">
 </head>
 <script type="text/javascript" src="assets/js/LoadJson.js"></script>
-<body style="background-color: #5e6575">
+<body>
   <div class="topmeau"></div>
   <iframe name="nav" src="assets/Module/nav.html" style="display: none"></iframe>
   <script>LoadJsonFrame()</script>
