new way for loading

--- a/404.html
+++ b/404.html
@@ -9,6 +9,6 @@
 <b style="font-size: 50px;">404</b><br>
 <!-- <span>Not Found</span><br> -->
 <i>Sorry,This Page Doesn't Exist</i><br>
-<img src="assets/images/鸽子.jpg" alt="咕咕咕" style="width: 50%"></img>
+<img src="https://atarsei.gitee.io/assets/images/鸽子.jpg" alt="咕咕咕" style="width: 50%"></img>
 </body>
 </html>
