--- a/about/index.html
+++ b/about/index.html
@@ -6,11 +6,10 @@
 <link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
 </head>
-<script type="text/javascript" src="../assets/js/LoadJson.js"></script>
+<script type="text/javascript" src="../assets/js/Load.js"></script>
 <body>
 	<div class="topmeau"></div><br><br><br>
 	<img src="https://atarsei.gitee.io/assets/images/敏感多情的戏精.jpg" alt="">
-	<iframe name="nav" src="../assets/Module/nav.html" style="display: none"></iframe>
-	<script>LoadJsonFrame()</script>
+	<script>LoadHtmlWrite("../assets/Module/nav.html")</script>
 </body>
 </html>
