--- a/article/index.html
+++ b/article/index.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
   <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
   </head>
-<script type="text/javascript" src="../assets/js/LoadJson.js"></script>
+<script type="text/javascript" src="../assets/js/Load.js"></script>
 	<body>
 		<div class="topmeau"></div>
 		<a href="tencent://message/?uin=2608822893&Site=http://vps.shuidazhe.com&Menu=yes">PC版</a>   
 		<a href="mqqwpa://im/chat?chat_type=wpa&uin=2608822893&version=1&src_type=web&web_src=oicqzone.com">移动版</a>
-		<iframe name="nav" src="../assets/Module/nav.html" style="display: none"></iframe>
-		<script>LoadJsonFrame()</script>
+		<script>LoadHtmlWrite("../assets/Module/nav.html")</script>
 </body>
 </html>
