--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <link rel="stylesheet" type="text/css" href="assets/css/Module.css">
   <link rel="stylesheet" type="text/css" href="assets/css/base.css">
 </head>
-<script type="text/javascript" src="assets/js/LoadJson.js"></script>
+<script type="text/javascript" src="assets/js/Load.js"></script>
 <body>
   <div class="topmeau"></div>
-  <iframe name="nav" src="assets/Module/nav.html" style="display: none"></iframe>
-  <script>LoadJsonFrame()</script>
+  <script>LoadHtmlWrite("assets/Module/nav.html")</script>
   <div class="content">
     <br>
     <br><br><br>
