--- a/route/index.html
+++ b/route/index.html
@@ -8,11 +8,10 @@
 <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
 </head>
 <script type="text/javascript" src="route.json"></script>
-<script type="text/javascript" src="../assets/js/LoadJson.js"></script>
+<script type="text/javascript" src="../assets/js/Load.js"></script>
 <body>
   <div class="topmeau"></div>
-  <iframe name="nav" src="../assets/Module/nav.html" style="display: none"></iframe>
-  <script>LoadJsonWrite()</script>
-  <script>LoadJsonFrame()</script>
+  <script>LoadJsonWrite("route.json")</script>
+  <script>LoadHtmlWrite("../assets/Module/nav.html")</script>
 </body>
 </html>
