--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404</title>
+    <link rel="icon" href="assets/images/ui/任意.jpg">
 </head>
 <body style="text-align: center;">
 <b style="font-size: 50px;">404</b><br>
