--- a/article/index.html
+++ b/article/index.html
@@ -3,6 +3,7 @@
 <head>		   
 <meta charset="UTF-8">
   <title>文章</title>
+  <link rel="icon" href="../assets/images/ui/任意.jpg">
   <link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
   <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
   </head>
