--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>任意的小站</title>
+  <link rel="icon" href="assets/images/ui/任意.jpg">
   <link rel="stylesheet" type="text/css" href="assets/css/Module.css">
   <link rel="stylesheet" type="text/css" href="assets/css/base.css">
 </head>
