--- a/route/index.html
+++ b/route/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>日常</title>
+<link rel="icon" href="../assets/images/ui/任意.jpg">
 <link rel="stylesheet" type="text/css" href="../assets/css/Module.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/route.css">
 <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
