--- a/about/index.html
+++ b/about/index.html
@@ -12,5 +12,6 @@
 	<div class="topmeau"></div><br><br><br>
 	<img src="https://atarsei.gitee.io/assets/images/敏感多情的戏精.jpg" alt="">
 	<script>LoadHtmlWrite("../assets/Module/nav.html","topmeau")</script>
+	<iframe src="assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
 </body>
 </html>
