--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
   <div class="topmeau"></div>
   <script>LoadHtmlWrite("assets/Module/nav.html","topmeau")</script>
-  <div class="content">
+  <div class="content" style="text-align: center;">
     <br>
     <br><br><br>
-    <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“当时她还年轻，不知道所有命运的馈赠，都已在暗中标下价码”</b><br>
-    <i style="position:relative;left:250px">-4.20</i><br><br><br><br>
+    <b>“😘”</b><br>
+    <i>-5.9</i><br><br><br><br>
   </div>
+  <iframe src="assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
 </body>
 </html>
