--- a/article/index.html
+++ b/article/index.html
@@ -13,6 +13,6 @@
 		<a href="tencent://message/?uin=2608822893&Site=http://vps.shuidazhe.com&Menu=yes">PC版</a>   
 		<a href="mqqwpa://im/chat?chat_type=wpa&uin=2608822893&version=1&src_type=web&web_src=oicqzone.com">移动版</a>
 		<script>LoadHtmlWrite("../assets/Module/nav.html","topmeau")</script>
-    <iframe src="assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
+    <iframe src="../assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
   </body>
 </html>
