--- a/route/index.html
+++ b/route/index.html
@@ -14,6 +14,6 @@
   <div class="topmeau"></div>
   <script>LoadJsonWrite("route.json")</script>
   <script>LoadHtmlWrite("../assets/Module/nav.html","topmeau")</script>
-  <iframe src="assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
+  <iframe src="../assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
 </body>
 </html>
