--- a/assets/Module/musicplayer.html
+++ b/assets/Module/musicplayer.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>musicplayer</title>
-<link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="http://atarsei.github.io/assets/font-awesome-4.7.0/css/font-awesome.min.css">
 <style>
     body{background-color: rgba(255, 255, 255, 0);}
     i{color: #d0d3da;}
     .contain {position: absolute;right: 1%;}
-    .text {position: absolute;right: 60px;width: 200px;color: #d0d3da}
+    .text {position: absolute;right: 70px;width: 200px;color: #d0d3da}
     .text div{position:absolute;top:0;width:100px;right:20px;overflow: hidden;white-space:nowrap;}
     #name {animation:move 7s linear infinite;position: relative;width: 10000px;}
     @keyframes move{
