--- a/assets/Module/musicplayer.html
+++ b/assets/Module/musicplayer.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>musicplayer</title>
-<link rel="stylesheet" href="http://atarsei.github.io/assets/font-awesome-4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://atarsei.github.io/assets/font-awesome-4.7.0/css/font-awesome.min.css">
 <style>
     body{background-color: rgba(255, 255, 255, 0);}
     i{color: #d0d3da;}
@@ -103,7 +103,7 @@ function NEXT()
     {num = getRndInteger(0, list.length-1)}
     else if(Mode=="InOrder")
     {num++;if(num>=list.length){num=0}};
-    audio.src = 'http://music.163.com/song/media/outer/url?id='+list[num].id+'.mp3';
+    audio.src = 'https://music.163.com/song/media/outer/url?id='+list[num].id+'.mp3';
     document.getElementById("name").innerHTML=list[num].name
 }
 
