--- a/assets/Module/musicplayer.html
+++ b/assets/Module/musicplayer.html
@@ -91,7 +91,7 @@ var list =[
 var num=-1;
 var Mode="Random";
 var audio=document.createElement("audio");
-audio.volume=0.7
+audio.volume=0.7;
 audio.setAttribute("autoplay",true);
 audio.setAttribute("controls",true);
 NEXT();
