--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <i>-5.9</i><br><br><br><br>
   </div>
   <iframe src="assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
-  <iframe height="1000px" width="1000px" style="position: fixed;bottom:0;right:0;border-style:none;" src="CubismSdkForWeb-4-r.1\Samples\TypeScript\Demo\index.html"></iframe>
+  <iframe height="1000px" width="1000px" style="position: fixed;top:100px;right:-500px;border-style:none;" src="CubismSdkForWeb-4-r.1\Samples\TypeScript\Demo\index.html"></iframe>
 </body>
 </html>
