--- a/CubismSdkForWeb-4-r.1/Samples/TypeScript/Demo/index.html
+++ b/CubismSdkForWeb-4-r.1/Samples/TypeScript/Demo/index.html
@@ -25,7 +25,7 @@
     var home_Path = 'https://haremu.com/'
 
 </script>
-<script type="text/javascript" src="live2d/js/message.js"></script>
+<!-- <script src="live2d/js/message.js"></script> -->
 </head>
 <body>
   <div id="landlord">
