--- a/assets/Module/nav.html
+++ b/assets/Module/nav.html
@@ -7,15 +7,22 @@
 </head>
 
 <body>
-  <div class="topmeau" >
-    <ul >
-      <li><a href="https://atarsei.github.io/about"><strong>关于</strong></a></li>
-      <li><a href="https://atarsei.github.io/article"><b>文章</b></a></li>
-      <li><a href="https://atarsei.github.io/route"><b>日常</b></a></li>
-      <li><a href="https://atarsei.github.io/"><b>首页</b></a></li>
-      <li><a href="https://atarsei.github.io/coverpage"><b>封面</b></a></li>
+  <div class="topmeau">
+    <ul>
+      <li><a id="about"><strong>关于</strong></a></li>
+      <li><a id="article"><b>文章</b></a></li>
+      <li><a id="route"><b>日常</b></a></li>
+      <li><a id="home"><b>首页</b></a></li>
+      <li><a id="coverpage"><b>封面</b></a></li>
       </ul>
     </div>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
+<script>
+  var web=location.protocol+"//"+location.hostname;
+  var childname=["about","article","route","coverpage"];
+  document.getElementById("home").href=web;
+  for (i in childname)
+  {document.getElementById(childname[i]).href=web+"/"+childname[i]};
+</script>
 </html>
