--- a/a.html
+++ b/a.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8"/>
@@ -12,5 +12,4 @@
       marked('# Marked in the browser\n\nRendered by **marked**.');
   </script>
 </body>
-</html> -->
-<iframe src="//player.bilibili.com/player.html?aid=940005&bvid=BV1cs411Z7Gv&cid=1362398&page=3" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+</html>
