完善route的图片显示

--- a/assets/Module/markdown.html
+++ b/assets/Module/markdown.html
@@ -9,7 +9,7 @@
   <script src="assets\js\node_modules\marked/marked.min.js"></script>
   <script>
     document.getElementById('content').innerHTML =
-      marked('# Marked in the browser\n\nRendered by **marked**.');
+      marked('- [ ] article的界面设计  ');
   </script>
 </body>
 </html>
