--- a/share.html
+++ b/share.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <script>
-        if (navigator.userAgent.match(/iPhone/||/Android/))
+        if (navigator.userAgent.match(/iPhone/)||navigator.userAgent.match(/Android/))
         {document.write('ios')}
         else 
         {document.write('PC')}
     </script>
-    <a href="http://wpa.qq.com/msgrd?v=3&uin=2608822893&site=qq&menu=yes">PC</a>
-    <a href="https://qm.qq.com/cgi-bin/qm/qr?k=5JT5Zqb4ZRf3Yj6bT3YGNlAI1WqQaLOx&noverify=0">phone</a>
+    <a href="http://wpa.qq.com/msgrd?v=3&uin=2608822893&site=qq&menu=yes" target="_Blank">PC</a>
+    <a href="https://qm.qq.com/cgi-bin/qm/qr?k=5JT5Zqb4ZRf3Yj6bT3YGNlAI1WqQaLOx&noverify=0" target="_Blank">phone</a>
 </body>
 </html>
