--- a/share.html
+++ b/share.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a{display: block;background-color: cadetblue;padding: 50px;}
+    </style>
 </head>
-<body>
+<body style="text-align: center;">
+    <a class='share'>a</a><br>
+    <a class='share'>b</a><br>
+    <a class='share'>c</a><br>
+    <a class='share'>d</a><br>
     <script>
-        if (navigator.userAgent.match(/iPhone/)||navigator.userAgent.match(/Android/))
-        {document.write('ios')}
-        else 
-        {document.write('PC')}
+        var shares=document.getElementsByClassName('share');
+        for (i in shares)
+        {
+            var share=shares[i]
+            if (navigator.userAgent.match(/iPhone/)||navigator.userAgent.match(/Android/))
+            {share.setAttribute('href','https://qm.qq.com/cgi-bin/qm/qr?k=5JT5Zqb4ZRf3Yj6bT3YGNlAI1WqQaLOx&noverify=0')}
+            else 
+            {share.setAttribute('href','http://wpa.qq.com/msgrd?v=3&uin=2608822893&site=qq&menu=yes')};
+            share.setAttribute('target','_Blank')
+        }
     </script>
-    <a href="http://wpa.qq.com/msgrd?v=3&uin=2608822893&site=qq&menu=yes" target="_Blank">PC</a>
-    <a href="https://qm.qq.com/cgi-bin/qm/qr?k=5JT5Zqb4ZRf3Yj6bT3YGNlAI1WqQaLOx&noverify=0" target="_Blank">phone</a>
 </body>
 </html>
