--- a/assets/Module/musicplayer.html
+++ b/assets/Module/musicplayer.html
@@ -21,7 +21,7 @@
 
 <body>
 <div class="contain">
-    <div style="background:#a5a8af;filter: blur(10px);width: 280px;height:10px;position: absolute;top:5px;right: 0;"></div>
+    <div style="background:#8b8f99;filter: blur(30px);width: 280px;height:10px;position: absolute;top:5px;right: 0;z-index: -10;border-radius: 4px;"></div>
     <div class="text">
         <b>正在播放:</b>
         <div><span id="name"></span></div>  
