--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="../assets/js/Load.js"></script>
 <body>
 	<div class="topmeau"></div><br><br><br>
-	<img src="https://atarsei.gitee.io/assets/images/敏感多情的戏精.jpg" alt="">
+	<img src="https://atarsei.gitee.io/assets/images/敏感多情的戏精.png" alt="">
 	<script>LoadHtmlWrite("../assets/Module/nav.html","topmeau")</script>
 	<script>PhotoStatus()</script>
 	<iframe src="../assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
