--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>关于</title>
-<link rel="icon" href="../assets/images/ui/任意.jpg">
+<link rel="icon" href="../assets/images/ui/任意.png">
 <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
 </head>
 <script type="text/javascript" src="../assets/js/Load.js"></script>
