--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,13 @@
 <title>关于</title>
 <link rel="icon" href="../assets/images/ui/任意.png">
 <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
+<style>
+	@media screen and (max-width:800px;)
+	{
+		.content{width: 90vw;}
+	}
+	img{max-width: 100%;}
+</style>
 </head>
 <script type="text/javascript" src="../assets/js/Load.js"></script>
 <body>
