--- a/assets/Module/nav.html
+++ b/assets/Module/nav.html
@@ -8,6 +8,7 @@
 
 <body>
   <div class="topmeau">
+    <div class="top_btn" onclick="topmeau(this)"><b>=</b></div>
     <ul>
       <li><a id="about"><strong>关于</strong></a></li>
       <li><a id="article"><b>文章</b></a></li>
