--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>关于</title>
 <link rel="icon" href="../assets/images/ui/任意.png">
 <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
