--- a/article/index.html
+++ b/article/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>文章</title>
   <link rel="icon" href="../assets/images/ui/任意.png">
   <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
