--- a/article/index.html
+++ b/article/index.html
@@ -13,6 +13,10 @@
     .main a{display:inline-block;text-decoration: none;background-color:rgb(94, 111, 143);padding: 10px;border-radius: 20px;margin-bottom: 7px;color:#d0d3da;margin:0.5vw;}
     .main a:hover{background-color:rgb(118, 140, 182);}
     .contain{float: left;}
+    @media screen and (max-width:800px)
+    {
+      .main{min-width:90vw;margin: 0 auto;padding:2vw;margin-top: 100px;}
+    }
   </style>
 </head>
 <script type="text/javascript" src="../assets/js/Load.js"></script>
