--- a/about/index.html
+++ b/about/index.html
@@ -7,9 +7,11 @@
 <link rel="icon" href="../assets/images/ui/任意.png">
 <link rel="stylesheet" type="text/css" href="../assets/css/base.css">
 <style>
-	@media screen and (max-width:800px;)
+	.content{font-size:medium;letter-spacing: normal;margin:0 auto;width: 50vw;min-width: 500px;}
+	@media screen and (max-width:800px)
 	{
-		.content{width: 90vw;}
+		.content{min-width:95vw;}
+		
 	}
 	img{max-width: 100%;}
 </style>
@@ -20,7 +22,7 @@
 	<script>LoadHtmlWrite("../assets/Module/nav.html","topmeau")</script>
 	<script>PhotoStatus()</script>
 	<iframe src="../assets/Module/musicplayer.html" style="position: fixed;right:0;top:60px;width:300px;height:40px;border-style:none;"></iframe>
-	<div class="content" style="opacity: ;font-size:medium;letter-spacing: normal;margin:0 auto;width: 50vw;min-width: 500px;"></div>
+	<div class="content"></div>
 	<script src="\assets\js\node_modules\marked/marked.min.js"></script>
 	<script src="/assets/js/Load.js"></script>
 	<script>
