--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="content" style="text-align: center;">
     <br>
     <br><br><br>
-    <b>“好热”</b><br>
-    <i>-6.6</i><br><br><br><br>
+    <b>“别问，问就是鸽了”</b><br>
+    <i>-6.12</i><br><br><br><br>
   </div>
   <script>LoadHtmlWrite("assets/Module/nav.html","topmeau")</script>
   <script>PhotoStatus()</script>
