--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <script type="text/javascript" src="assets/js/Load.js"></script>
 <body>
   <div class="topmeau"></div>
-  
-  <div class="content" style="text-align: center;">
+  <div style="width: 80vw;margin: 0 auto;color: #d0d3da;font-size:25px;">
     <br>
-    <br><br><br>
-    <b>“别问，问就是鸽了”</b><br>
-    <i>-6.12</i><br><br><br><br>
+    <br><br><br> 
+    <b style="letter-spacing:0;margin: 0;padding: 0;line-height: 0px;">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp“我现在既不是化学家，也不是数学家，更不是物理学家。我靠写文章为生，与科技绝缘——只是有时弄弄计算机。这个行当我会得不少，从最低等的汇编语言，到最新潮的C++全会写，硬件知识也有一些。</b><br>
+    <b style="letter-spacing:0;margin: 0;padding: 0;line-height: 0px;"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp但从我自己的利益来看，我还不如一点都不会，省得整夜不睡，鼓捣我的电脑，删东加西，最后把整个系统弄垮，手头又没有软件备份。</b>     <br>
+    <b style="letter-spacing:0;margin: 0;padding: 0;line-height: 0px;"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp自己觉得该告一段落，去写小说了。”</b><br> </div>    
+  <div class="content" style="text-align: center;">
+
+
+    <i>-王小波</i><br><br><br><br>
   </div>
   <script>LoadHtmlWrite("assets/Module/nav.html","topmeau")</script>
   <script>PhotoStatus()</script>
